# proxyctl-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  default_hosts.example.txt  install.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: release.sh  setup_shell_integration.sh
src/: config.rs  db.rs  defaults.rs  detect.rs  doctor.rs  lib.rs  main.rs  proxy.rs
tests/: config.rs  db.rs  doctor.rs  integration_test.rs  proxy.rs  ssh_config.rs
