[package]
name = "proxyctl-rs"
version = "1.1.0"
edition = "2021"
authors = ["Adrian Ross"]
description = "A CLI tool for managing proxy configurations"
license = "MIT"
keywords = ["proxy", "vpn", "cli", "network"]
categories = ["command-line-utilities"]
repository = "https://github.com/adrianmross/proxyctl-rs"
homepage = "https://github.com/adrianmross/proxyctl-rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.17"
dirs = "6.0"
regex = "1.0"
config = "0.15.19"
toml = "0.9.8"
dotenvy = "0.15"
turso = "0.3.2"
colored = "3.0"

[dev-dependencies]
tempfile = "3.0"